# red_wine_quality

./: README.md  main.ipynb  pyproject.toml
